fix(docs-infra): make hamburger menu non focusable when not visible
the header hamburger menu gets removed from the page by moving it
outside the screen, it can however still be accessed via keyboard
navigation, add a visibility hidden to the element to prevent such
behavior

--- a/aio/src/styles/1-layouts/top-menu/_top-menu.scss
+++ b/aio/src/styles/1-layouts/top-menu/_top-menu.scss
@@ -52,6 +52,7 @@ mat-toolbar.app-toolbar {
       // Hamburger hidden by default on large screens.
       // (Will be shown per doc.)
       margin: $hamburgerHiddenMargin;
+      visibility: hidden;
     }
 
     @media (max-width: 480px) {
